--- a/CSS/Projetx.css
+++ b/CSS/Projetx.css
@@ -13,6 +13,7 @@ main section {
     border: #1F2933 solid 2px;
     margin-top: 50px;
     padding: 25px;
+    border-radius: 5%;
 }
 
 /* img bas */
@@ -23,6 +24,7 @@ main ul a li {
     margin: 25px;
     list-style: none;
     justify-content: center;
+    border-radius: 10%;
 
 }
 
@@ -44,4 +46,16 @@ main ul {
 
 main ul li h2 {
     text-align: center;
+}
+
+/* transition color */
+
+main ul a li {
+    background-color: var(--backgroundcolor);
+    transition: 1s;
+}
+
+main ul a li:hover {
+    background-color: var(--backgroundcolorhover);
+    transition: 1s;
 }
